# project-cns

./: .gitmodules  atm.md  bank.md
atm/: atm.md  bank.md  index.md
project-submissions/group-1/: README.md  ca_key.pem
project-submissions/group-1/Trial_implementations/: atm (1).cpp  atm.cpp  atm_locally_working_18oct.cpp  atm_with_everything.cpp  bank (1).cpp  bank.cpp  bank_final.cpp  bank_locally_working_18oct.cpp  bank_server.crt  bank_server.key  bank_with_everything.cpp  ca.key  ca.pem  certificate.crt  nk.py  server_ip.txt  tm.py
project-submissions/group-10/: Readme.md
project-submissions/group-11/: Bank_Server.cpp  Bank_client.cpp  README.md  auth.h  makefile
project-submissions/group-12/: LICENSE  README.md
project-submissions/group-2/: README.md  requirements.txt
project-submissions/group-3/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  atm  atm_cleaner.sh  docker-compose.yaml  logging_config.yaml  openssl.cnf  pyproject.toml  server  setup.sh
project-submissions/group-3/banking_system/: atm.py  bank.py  key.py  sanity.py
project-submissions/group-4/: README.md
project-submissions/group-5/: .gitignore  README.md
project-submissions/group-6/: .gitignore  README.md
project-submissions/group-7/: README.md  atm  atm.cpp  bank  bank.auth  bank.cpp  example.db  help.txt  private_key.pem  public_key.pem
project-submissions/group-7/sample/: sample.cpp
project-submissions/group-8/: .gitignore  CMakeLists.txt  README.md  constraints.md  openssl.cnf
project-submissions/group-8/.github/workflows/: ci-build-and-test.yml
project-submissions/group-8/batches/: batch1  batchInvalid1  batchValid1  batchValid2  batchinvalid2
project-submissions/group-8/docs/: EXAMPLES.md  LOGAPPEND.md  LOGREAD.md  SECURITYGUARD.md
project-submissions/group-8/src/: client.cpp  server.cpp  utils.cpp  utils.h
project-submissions/group-9/: README.md  atm.cpp  bank.cpp
securityguard/: EXAMPLES.md  LOGAPPEND.md  LOGREAD.md  SPEC.md
